Tue Nov  4 13:39:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a few tests for labview and add !WinCE to all
          !LabVIEW_RT marked tests so that we can start testing
          for wince

Tue Nov  4 08:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_ctype.inl:
          Added support for ACE_LACKS_ISASCII

        * ace/config-vxworks6.2.h
        * ace/config-vxworks6.3.h
        * ace/config-vxworks6.4.h
          Define for ACE_LACKS_ISASCII for rtp

Tue Nov  4 07:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.5.h:
          Added ACE_LACKS_ISCTYPE/ACE_LACKS_ISBLANK

        * ace/config-sunos5.10.h:
          SunOS 10 has isblank

Tue Nov  4 07:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_LACKS_ISCTYPE

Tue Nov  4 07:05:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-aix-5.x.h:
          Added ACE_HAS_CTYPE_T

Mon Nov  3 20:05:10 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-leopard.h:
          Added ACE_ISCTYPE_EQUIVALENT.

Mon Nov  3 17:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:
          Added ACE_LACKS_ISBLANK/ACE_LACKS_ISCTYPE

Mon Nov  3 14:35:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Disabled several tests with CORBA/e compact/micro

Mon Nov  3 13:17:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_LACKS_ISBLANK for kernel mode

Mon Nov  3 13:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h: